<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:layout_weight="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:shrinkColumns="1" >
	    <TableRow
		    android:focusableInTouchMode="true"
		    android:focusable="true" 
		    android:id="@+id/settings_layout_focusable">
		    <TextView
		        android:text="@string/settings_label_username" 
		        style="@style/text_medium"/>
		    <EditText
		        android:id="@+id/settings_input_username"
		        android:inputType="textEmailAddress"
		        android:singleLine="true"
		        android:layout_width="1000dp"
		        style="@style/text_medium">
		    </EditText>
		</TableRow>
		<TableRow>
		    <TextView
		        android:text="@string/settings_label_password" 
		        style="@style/text_medium"/>
		    <EditText
		        android:id="@+id/settings_input_password"
		        android:inputType="textPassword"
		        android:singleLine="true"
		        style="@style/text_medium">
		    </EditText>
		</TableRow>
		<TableRow>
		    <TextView
		        android:text="@string/settings_label_point" 
		        style="@style/text_medium"/>
		    <EditText
		        android:id="@+id/settings_input_point"
		        android:inputType="text"
		        android:hint="@string/input_default_hint"
	   	        android:ellipsize="end"
	   	        android:singleLine="true"
		        style="@style/text_medium">
		    </EditText>
		</TableRow>
		<TableRow>
		    <TextView
		        android:text="@string/settings_label_service_uri" 
		        style="@style/text_medium"/>
		    <EditText
		        android:id="@+id/settings_input_service_uri"
		        android:inputType="textUri"
		        android:hint="@string/settings_hint_service_uri"
		       	android:ellipsize="end"
		       	android:singleLine="true"
		        style="@style/text_medium">
		    </EditText>
		</TableRow>
		<TableRow>
		    <CheckBox
		        android:id="@+id/settings_checkbox_allow_invalid_values"
		        android:text="@string/settings_label_allow_invalid_values" 
		        android:layout_span="2"
		       	android:ellipsize="end"
		       	android:singleLine="true"
		        style="@style/text_medium">
		    </CheckBox>
		</TableRow>
		<TableRow>
		    <CheckBox
		        android:id="@+id/settings_checkbox_replace_data"
		        android:text="@string/settings_label_replace_data" 
		        android:layout_span="2"
		       	android:ellipsize="end"
		       	android:singleLine="true"
		        style="@style/text_medium">
		    </CheckBox>
		</TableRow>
		<TableRow>
			<Button
			    android:id="@+id/settings_button_sync"
			    android:text="@string/settings_button_sync" 
			    android:layout_span="2"
			    style="@style/text_medium">
			</Button>
		</TableRow>
	</TableLayout>
</ScrollView>