<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:scrollbars="none"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:shrinkColumns="1" >
                
        <TableRow>
            <TextView
		        android:text="@string/valuedialog_label_index" 
		        style="@style/text_medium"/>
		    <TextView
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:id="@+id/valuedialog_value_index"
		        android:text="@string/not_available" 
		        style="@style/text_medium"/>
		</TableRow>
        <TableRow>
            <TextView
		        android:text="@string/valuedialog_label_value" 
		        style="@style/text_medium"/>
		    <TextView
		        android:paddingLeft="@dimen/activity_horizontal_margin"
				android:layout_width="1000dp"
		        android:id="@+id/valuedialog_value_value"
		        android:text="@string/not_available"
		        style="@style/text_medium"/>
		</TableRow>
		
        <TableRow>
            <TextView
		        android:text="@string/valuedialog_label_limits" 
		        style="@style/text_medium"/>
		    <TextView
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:id="@+id/valuedialog_value_limits"
		        android:text="@string/not_available" 
		        style="@style/text_medium"/>
		</TableRow>
		
        <TableRow>
            <TextView
		        android:text="@string/valuedialog_label_updated" 
		        style="@style/text_medium"/>
		    <TextView
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:id="@+id/valuedialog_value_updated"
		        android:text="@string/not_available"
		        style="@style/text_medium"/>
		</TableRow>
		<TableRow>
	        <TextView
		        android:id="@+id/valuedialog_value_required"
		        android:text="@string/not_available"
		        android:layout_span="2"
		        style="@style/text_medium"/>
	    </TableRow>
    </TableLayout>

</ScrollView>